Interpolate referenced components in AST